--- a/css/Accueil.css
+++ b/css/Accueil.css
@@ -7,3 +7,29 @@ body{
     font-size:150% ; 
     color: antiquewhite;
 }
+button {
+    background: #fbca1f;
+    font-family: inherit;
+    padding: 0.6em 1.3em;
+    font-weight: 900;
+    font-size: 18px;
+    border: 3px solid black;
+    border-radius: 0.4em;
+    box-shadow: 0.1em 0.1em;
+    cursor: pointer;
+    margin-left: 45%;
+    margin-top: 15%;
+    size: 100em;
+    height: 100%;
+    width: 10%;
+  }
+  
+  button:hover {
+    transform: translate(-0.05em, -0.05em);
+    box-shadow: 0.15em 0.15em;
+  }
+  
+  button:active {
+    transform: translate(0.05em, 0.05em);
+    box-shadow: 0.05em 0.05em;
+}
