ajout d'un menu de pause + fonction qui vont avec

--- a/css/stylegame.css
+++ b/css/stylegame.css
@@ -16,3 +16,58 @@ body, html {
 canvas {
   border: 5px solid rgb(0, 0, 0);
 }
+
+.pause-window {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none; 
+  justify-content: center;
+  align-items:center;
+}
+
+.pause-content {
+  display: flex;
+  flex-direction:column;
+
+  width: 250px;
+  height: 300px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.game-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none; 
+  justify-content: center;
+  align-items: center;
+}
+
+
+.game-menu-content {
+  width: 500px;
+  height: 500px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+}
