--- a/css/stylegame.css
+++ b/css/stylegame.css
@@ -16,3 +16,12 @@ body, html {
 canvas {
   border: 5px solid rgb(0, 0, 0);
 }
+
+#hud {
+  position: absolute;
+  bottom: 10px;
+  left: 20px;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 10px;
+  border-radius: 5px;
+}
