--- a/css/stylegame.css
+++ b/css/stylegame.css
@@ -32,13 +32,24 @@ canvas {
 .pause-content {
   display: flex;
   flex-direction:column;
-
+  border-radius: 25px;
+  border: 5px solid #010101;
   width: 250px;
   height: 300px;
   background-color: #fff;
   padding: 20px;
-  border-radius: 10px;
   text-align: center;
+  align-items: center;
+}
+
+
+.pause-content button {
+  padding: 10px 20px;
+  background-color: #404243;
+  color: #fff;
+  width: 150px;
+  border: 5px solid #010101;
+  border-radius: 18px;
 }
 
 button {
@@ -60,14 +71,187 @@ button {
   display: none; 
   justify-content: center;
   align-items: center;
+  display: flex;
+  flex-direction:column; 
 }
 
 
 .game-menu-content {
+  border: 5px solid #010101;
+  border-radius: 35px;
+  width: 500px;
+  height: 500px;
+  background-color: #875151;
+  padding: 20px;
+  text-align: center;
+  font-weight: bolder;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction:column;
+}
+
+
+.game-menu-content button {
+  position: relative;
+  top: -50px;
+  padding: 10px 20px;
+  background-color: #404243;
+  color: #fff;
+  width: 180px;
+  height: 60px;
+  border: 5px solid #010101;
+  border-radius: 18px;
+  font-size: 20px;
+  align-items: center;
+}
+
+.title {
+  font-family: "Copperplate", Fantasy;
+  font-size: 35px;
+}
+
+.gametitle {
+  position: relative;
+  top: -50px;
+  font-family: "Copperplate", Fantasy;
+  font-size: 100px;
+}
+
+
+.optionTitle {
+  font-family: "Copperplate", Fantasy;
+  font-size: 50px;
+  position: relative;
+  top: -15px;
+}
+
+.optionTitle2 {
+  font-family: "Copperplate", Fantasy;
+  font-size: 50px;
+  position: relative;
+  top: -25px;
+}
+
+
+.optionFromMenu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none; 
+  justify-content: center;
+  align-items:center;
+}
+
+.optionFromMenu-content{
+  display: flex;
+  flex-direction:column;
+  border-radius: 25px;
+  border: 5px solid #010101;
   width: 500px;
   height: 500px;
   background-color: #fff;
   padding: 20px;
-  border-radius: 10px;
   text-align: center;
+  align-items: center;
+}
+
+
+
+.optionFromGame {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none; 
+  justify-content: center;
+  align-items:center;
+}
+
+.optionFromGame-content {
+  display: flex;
+  flex-direction:column;
+  border-radius: 25px;
+  border: 5px solid #010101;
+  width: 500px;
+  height: 400px;
+  background-color: #fff;
+  padding: 20px;
+  text-align: center;
+  align-items: center;
+}
+
+
+.optionFromMenu-content button{
+  padding: 10px 20px;
+  background-color: #404243;
+  color: #fff;
+  width: 150px;
+  border: 2px solid #010101;
+  border-radius: 18px;
+  position: relative;
+  bottom : 10px;
+}
+
+.optionFromGame-content button{
+  padding: 10px 20px;
+  background-color: #404243;
+  color: #fff;
+  width: 120px;
+  border: 2px solid #010101;
+  border-radius: 18px;
+  position: relative;
+  bottom : 45px;
+}
+
+
+.Reculer,
+.Droite,
+.Gauche,
+.Avancer {
+  position: relative;
+  top: -25px;
+  display: flex;
+  flex-direction: row;
+}
+
+.Reculer input,
+.Droite input,
+.Gauche input,
+.Avancer input {
+  position: relative;
+  width: 60px;
+  height: 20px;
+  font-size: 20px;
+  text-align: center;
+  top: 25px;
+  left: 10px;
+}
+
+.optionFromGame-content .Reculer,
+.optionFromGame-content .Droite,
+.optionFromGame-content .Gauche,
+.optionFromGame-content .Avancer {
+  position: relative;
+  top: -55px;
+  display: flex;
+  flex-direction: row;
+}
+
+.optionFromGame-content .Reculer input,
+.optionFromGame-content .Droite input,
+.optionFromGame-content .Gauche input,
+.optionFromGame-content .Avancer input {
+  position: relative;
+  width: 60px;
+  height: 20px;
+  font-size: 15px;
+  text-align: center;
+  top: 25px;
+  left: 10px;
 }
